# interview_trainer_desktop

./: .gitignore  AGENTS.md  CODEX_SESSION_HANDOFF.md  FUTURE_DEVELOPMENT_SPEC.md  MULTI_THREAD_WORKFLOW.md  PERSISTENT_KNOWLEDGE_THREAD_PROMPT.md  README.md  THREAD_OWNERSHIP.md
.codex-tmp/: new_thread_behavior_report.md  new_thread_behavior_test.md
backend/: pyproject.toml
backend/src/interview_trainer/: __init__.py  __main__.py  answer_control.py  api.py  audio.py  briefing.py  config.py  corrections.py  generation.py  knowledge.py  library_compile.py  library_paths.py  library_repository.py  library_retriever.py  library_session.py  library_store.py  library_types.py  prompts.py  realtime_transcription.py  routing.py  service.py  transcription.py  turns.py  types.py  workspace.py
backend/tests/: test_answer_control.py  test_audio.py  test_config.py  test_generation.py  test_knowledge.py  test_library_api.py  test_library_compile.py  test_library_repository.py  test_library_store.py  test_routing.py  test_service.py  test_transcription.py  test_turns.py  test_workspace.py
desktop/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
desktop/electron/: main.ts  preload.ts
desktop/src/: App.tsx  styles.css  types.ts  vite-env.d.ts
desktop/src/api/: client.ts  library.ts
desktop/src/mock/: sample.ts
desktop/src/types/: library.ts
desktop/test/: electron-shell-esm.test.mjs
docs/superpowers/plans/: 2026-03-17-alibaba-realtime-asr.md  2026-03-17-persistent-knowledge-library.md
(+2 files in other folders)
